# answerrocket-python-client

./: .envrc  .gitignore  Makefile  gql-operation-gen.sh  gql-schema-gen.sh  pyproject.toml  readme.md  sample_dataset_crud_workflow.py
.github/workflows/: publish-to-pypi.yml  wiki-sync.yml
answer_rocket/: __init__.py  auth.py  chat.py  client.py  client_config.py  config.py  data.py  email.py  error.py  layouts.py  llm.py  observability.py  output.py  skill.py  test_harness.py  tracked_values.py  types.py
answer_rocket/graphql/: client.py  schema.py  sdk_operations.py
answer_rocket/graphql/operations/: chat.gql  config.gql  copilots.gql  data.gql  database-kshots.gql  dataset-kshots.gql  email.gql  layouts.gql  llm.gql  skill.gql  system.gql  tracked-dimension-values.gql
answer_rocket/util/: __init__.py  cache_manager.py  meta_data_frame.py  rabbit.py
scripts/: generate_docs.py  generate_docs.sh
test/: test_client.py  test_observability.py
test/fixtures/: example_otlp_trace.json
wiki/: API-Chat.md  API-Client.md  API-Config.md  API-Data.md  API-Llm.md  API-Output.md  API-Skill.md  API-Types.md  Home.md
