[project]
name = "answerrocket-client"
version = "0.1.26.0"
description = "Python client for interacting with AnswerRocket's skill API"
readme = "readme.md"
requires-python = ">=3.10.7"

dependencies = [
    "sgqlc",
    "openai",
    "pandas>=1.5.1",
    "typing-extensions",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
